objects/Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement</relationshipLabel>
        <relationshipName>Agreement</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amendment_Completion_Date__c</fullName>
        <label>Amendment Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amendment__c</fullName>
        <label>Amendment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Number__c</fullName>
        <label>Legacy Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Services_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master Services Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <label>Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Date__c</fullName>
        <label>Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision #</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Siebel Row Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Agreement</label>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>